--- a/src/pages/experience/experience.css
+++ b/src/pages/experience/experience.css
@@ -1,13 +1,13 @@
 .experience-section {
   scroll-margin-top: 80px;
-  background-color: #1A1A1B;
+  background-color: #121212;
   padding: 80px 60px;
   color: #fff;
 }
 
 .experience-header {
   text-align: center;
-  margin-bottom: 50px;
+  /* margin-bottom: 10px; */
 }
 
 .experience-label {
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
-  padding: 80px 200px;
+  padding: 50px 200px;
 }
 
 .experience-item {
@@ -78,7 +78,7 @@
     padding: 60px 30px;
   }
   .experience-timeline{
-      padding: 0px 0px;
+      padding: 50px 0px;
 
   }
   .experience-title {
@@ -97,7 +97,7 @@
     font-size: 1.1rem;
   }
   .experience-timeline{
-      padding: 0px 0px;
+      padding: 50px 0px;
 
   }
   .experience-details {
